# Nexus-Ai

./: .env.example  .env.railway  .env.render  .gitignore  QUICKSTART.md  README.md  fly.toml  install-windows.bat  install.sh  live_engine.py  pipeline_live.py  pyproject.toml  railway.toml  render.yaml  setup_and_run.py  start-windows.bat  start-windows.ps1  telegram_bot_v3.py
.github/workflows/: ci.yml
config/: __init__.py  settings.py
dashboard/: app.py
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
docs/: ARCHITECTURE.md  PHASE1_CHECKLIST.md  SECURITY.md
k8s/: deployment.yaml
nginx/: nexus.conf
scripts/: setup.py
src/: __init__.py  cli.py
src/agents/: __init__.py  adaptive_debate.py  base.py  classifier.py  critic.py  domain_agents.py  drafter.py  fact_checker.py  llm_client.py  orchestrator.py  reasoner.py  researcher.py  synthesizer.py  verifier.py
src/api/: __init__.py  main.py
src/browser/: __init__.py  agent.py  cross_verifier.py  fleet.py  free_apis.py  live_scraper.py  pipeline.py  screenshot_diff.py  selector_healer.py  site_registry.py  site_registry_v2.py  trust_scorer.py  validator.py
src/core/: __init__.py  pipeline.py
src/decision/: __init__.py  agent.py
src/hitl/: __init__.py  gate.py
src/interfaces/: __init__.py  image_handler.py  streamlit_dashboard.py  telegram_bot.py  voice_handler.py  web_ui.html
src/meeting/: __init__.py  room.py
src/memory/: __init__.py  session_memory.py  vector_store.py
src/scheduler/: __init__.py  jobs.py  price_monitor.py
src/security/: __init__.py  audit_chain.py  audit_logger.py  auth.py  credential_rotation.py  input_guard.py  keychain.py  output_sanitizer.py  pii_masker.py  rate_limiter.py  token_blacklist.py
src/tools/: email_analyzer.py  email_tool.py  spotify_tool.py  task_executor.py
src/utils/: __init__.py  db.py  logger.py  query_cache.py
tests/: test_all_improvements.py  test_all_phases.py
tests/integration/: test_api_phase1.py
tests/security/: run_phase1_tests.py  test_phase1_security.py  test_phase1_standalone.py
tests/unit/: test_auth.py  (+4 more)
(+9 files in other folders)
